--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>David's site</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -26,6 +26,13 @@
       <H2 id="project-title">Projects</h2>
       <div id="tile1" class="project-tile">
         <a href="https://codepen.io/Da-Vidic/full/yLoGero"  target="_blank"> Link to project</a>
+      </div>
+    </section>
+
+    <section id="projects" class="projects">
+      <H2 id="project-title">Projects</h2>
+      <div id="tile1" class="project-tile">
+        <a href="\test.html"  target="_blank"> Link to test site</a>
       </div>
     </section>
     
