--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </section>
 
     <section id="projects" class="projects">
-      <H2 id="project-title">Projects</h2>
+      <H2 id="project-title">Test Site</h2>
       <div id="tile1" class="project-tile">
-        <a href="\test.html"  target="_blank"> Link to test site</a>
+        <a href="/TestSite/test.html"  target="_blank"> Link to test site</a>
       </div>
     </section>
     
