--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>David's Page</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="preloader.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="/preloader.js"></script>
 </head>
 
 <div id="preloader"  class="banter-loader">
