--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>David's Page</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
-    <script src="/script.js">
-  
-
-    </script>
+    <script src="/script.js"></script>
 </head>
 
 <div id="preloader"  class="banter-loader">
