--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <section id="contacts" class="scroll-page">
   <a id="profile-link" href="https://github.com/David-G-Vidic/"
-     target="_blank">gitHub<img src="/logos/git-w.png" width="30px"; color="#fff"></img></a>
+     target="_blank">gitHub<img src="logos/git-w.png" width="30px"; color="#fff"></img></a>
     <a id="linked-link" href="https://www.linkedin.com/in/david-vidic-4838291b7/"
-     target="_blank">LinkedIn<img src="/logos/in-w.png" width="30px";></img></a>
+     target="_blank">LinkedIn<img src="logos/in-w.png" width="30px";></img></a>
 </section>
 </main>
