--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <section id="projects" class="projects scroll-page">
   <H2 id="project-title">Projects</h2>
   <div id="tile1" class="project-tile">
-    <a href="https://codepen.io/Da-Vidic/full/yLoGero"  target="_blank"> Link to project</a>
+    <a href="https://github.com/David-G-Vidic/System-Duplication-Tower-Project"  target="_blank"> Link to project</a><!-- Old link: https://codepen.io/Da-Vidic/full/yLoGero -->
   </div>
 </section>
 
